# optical_tachometer

./: .gitignore  CMakeLists.txt  README.md  cmake_avr_functions.cmake
git/hooks/: install  pre-commit
include/: tach.h
src/: tach.cc
test/: CMakeLists.txt  optical_tachometer_test.cc  uart.cc  uart.h
test/python_test_program/: serialtach.py  serialtachgui.py
